Fix icon size & document list overflow.

--- a/_sass/_documents.scss
+++ b/_sass/_documents.scss
@@ -8,14 +8,16 @@
       clear: both;
 
       &::before {
+        $icon-size: 44px;
+
         content: "insert_drive_file";
         font-family: 'Material Icons';
-        font-size: 40px;
+        font-size: $icon-size;
         line-height: 1;
         display: block;
         float: left;
-        width: 40px;
-        height: 40px;
+        width: $icon-size;
+        height: $icon-size;
         color: #757575;
         font-feature-settings: 'liga';
         -moz-font-feature-settings: 'liga';
@@ -24,6 +26,9 @@
       }
       p {
         margin: 0;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
 
         a {
           font-size: 16px;
