--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,6 +7,10 @@ main {
   @include limit-width;
   @include pad;
 
+  h1 {
+    font-size: 36px;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Slab', serif;
   }
